--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/proman-javascript.iml
