--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/",
+  "start_url": "/static/js/pwa_test.html",
   "background_color": "#fff",
   "theme_color": "#ede43b",
   "display": "fullscreen"
