--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/png"
     }
   ],
-  "Scope": "https://proman-app.herokuapp.com",
+  "Scope": "https://proman-app.herokuapp.com/static/js/",
   "start_url": "/static/js/pwa_test.html",
   "background_color": "#fff",
   "theme_color": "#ede43b",
