--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-Click==7.0	
-Flask==1.0.2
-gunicorn==19.9.0	
-Jinja2==2.10	
-MarkupSafe==1.1.1	
-Werkzeug==0.14.1	
-itsdangerous==1.1.0	
-pip==19.0.3	
-psycopg2==2.7.7	
-psycopg2-binary==2.7.7
-requests==2.9.1
-setuptools==39.1.0
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+Flask==1.1.1
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+psycopg2==2.8.4
+psycopg2-binary==2.8.4
+requests==2.22.0
+urllib3==1.25.7
+Werkzeug==0.16.0
